# extras_require

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  build_docs.sh  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_build_conda.sh  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  docs_source.py  index.rst  installation.rst  license.rst  requirements.txt  rtd-extra-deps.txt  usage.rst
doc-source/_static/: style.css
doc-source/_templates/: footer.html
doc-source/api/: directive.rst  extras_require.rst  index.rst  sources.rst
doc-source/usage/: configuration.rst  directive.rst  installation.rst
package_name/: __init__.py
sphinxcontrib/: extras_require.py
sphinxcontrib/extras_require/: __init__.py  directive.py  flit_config.py  purger.py  sources.py
tests/: conftest.py  requirements.txt  test_directive.py  test_flag.py  test_flit_config.py  test_from___pkginfo__.py  test_from_file.py  test_from_flit.py  test_from_pyproject.py  test_from_setup_cfg.py  test_purge.py  test_setup.py
tests/doc-test/: manual_demo.html
tests/doc-test/test-root/: conf.py  flit_demo.rst  index.rst  manual_demo.rst  no_requirements_demo.rst  pkginfo_demo.rst  pyproject_demo.rst  requirements_file_demo.rst  scopes_demo.rst  setup_cfg_demo.rst
tests/test_directive/: test_flit_demo_flit_demo_html_.html  test_manual_demo_manual_demo_html_.html  test_no_requirements_demo_no_requirements_demo_html_.html  test_output_flit_demo_html_.html  test_output_manual_demo_html_.html  test_output_pkginfo_demo_html_.html  test_output_requirements_file_demo_html_.html  test_output_scopes_demo_html_.html  test_output_setup_cfg_demo_html_.html  test_pkginfo_demo_pkginfo_demo_html_.html  test_requirements_file_demo_requirements_file_demo_html_.html  test_scopes_demo_scopes_demo_html_.html  test_setup_cfg_demo_setup_cfg_demo_html_.html
tests/test_directive_/: test_no_requirements_demo_no_requirements_demo_html_.html  test_output_flit_demo_html_.html  test_output_manual_demo_html_.html  test_output_pkginfo_demo_html_.html  test_output_requirements_file_demo_html_.html  test_output_scopes_demo_html_.html  test_output_setup_cfg_demo_html_.html
