[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "extras_require"
version = "0.3.0"
description = "Display a warning at the top of module documentation that it has additional requirements."
readme = "README.rst"
keywords = [ "documentation", "requirements", "sphinx", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/extras_require"
"Issue Tracker" = "https://github.com/sphinx-toolbox/extras_require/issues"
"Source Code" = "https://github.com/sphinx-toolbox/extras_require"
Documentation = "https://extras_require.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "BSD-3-Clause"
package = "sphinxcontrib"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.dep_checker]
allowed_unused = ["sphinx_prompt"]
namespace_packages = ["sphinxcontrib.extras_require"]
